[gd_scene load_steps=15 format=3 uid="uid://boecd0bnfb5bt"]

[ext_resource type="Theme" uid="uid://dgmb2646iktpp" path="res://resources/theme.tres" id="1_bqqt6"]
[ext_resource type="PackedScene" uid="uid://dxkh8w2ds2brx" path="res://scenes/background.tscn" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://cyuhg5yloxrdu" path="res://scripts/main_menu.gd" id="2_tbmy8"]
[ext_resource type="SystemFont" uid="uid://7tbqh57wvo12" path="res://resources/base_font.tres" id="3_bqqt6"]
[ext_resource type="Script" uid="uid://ygtrimm8jn2r" path="res://scripts/input_mode_sensors_button.gd" id="4_8ln24"]
[ext_resource type="Script" uid="uid://cxln43a233oir" path="res://scripts/input_mode_button.gd" id="4_wu84c"]
[ext_resource type="Script" uid="uid://pqsscp47tjbh" path="res://scripts/rotator_2d.gd" id="7_jk1qb"]
[ext_resource type="Script" uid="uid://coejdc7tqlu5s" path="res://scripts/arc_2d.gd" id="8_5dd4i"]
[ext_resource type="PackedScene" uid="uid://ia87tskeu176" path="res://scenes/menu_option.tscn" id="9_jk1qb"]

[sub_resource type="FontVariation" id="FontVariation_wu84c"]
base_font = ExtResource("3_bqqt6")
variation_embolden = 0.5

[sub_resource type="FontVariation" id="FontVariation_1nvk1"]
base_font = SubResource("FontVariation_wu84c")
variation_transform = Transform2D(1.1, 0.2, 0, 1, 0, 0)
spacing_glyph = 4

[sub_resource type="LabelSettings" id="LabelSettings_8ln24"]
font = SubResource("FontVariation_1nvk1")
font_size = 92
font_color = Color(0.905075, 0.876572, 1.0106, 1)
outline_size = 2
outline_color = Color(-0.117783, 0.272232, 0.336823, 1)
shadow_size = 5
shadow_offset = Vector2(50, 50)

[sub_resource type="FontVariation" id="FontVariation_rtw2f"]
base_font = ExtResource("3_bqqt6")
variation_embolden = 0.5

[sub_resource type="LabelSettings" id="LabelSettings_wu84c"]
font = SubResource("FontVariation_rtw2f")
font_size = 32
outline_size = 4
outline_color = Color(0.190887, 0.0804901, 0.391968, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bqqt6")
script = ExtResource("2_tbmy8")

[node name="Background" parent="." instance=ExtResource("1_l6cm7")]
position = Vector2(320, 320)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -320.0
offset_top = 88.0
offset_right = 320.0
offset_bottom = 245.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 1
text = "Arco"
label_settings = SubResource("LabelSettings_8ln24")
horizontal_alignment = 1

[node name="InputModeLabel" type="Label" parent="."]
modulate = Color(0.999985, 1, 1, 0.774403)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -149.0
offset_right = 128.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 32
text = "Select Input Mode"
label_settings = SubResource("LabelSettings_wu84c")

[node name="InputModeButtons" type="HFlowContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 162.0
offset_top = -366.0
offset_right = -162.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
alignment = 1

[node name="SensorsButton" type="Button" parent="InputModeButtons"]
layout_mode = 2
text = "Device Motion
(recommended)"
script = ExtResource("4_8ln24")

[node name="MouseButton" type="Button" parent="InputModeButtons"]
layout_mode = 2
text = "Mouse"
script = ExtResource("4_wu84c")
mode = 1

[node name="JoystickButton" type="Button" parent="InputModeButtons"]
layout_mode = 2
text = "Joystick"
script = ExtResource("4_wu84c")
mode = 2

[node name="Rotator2D" type="Node2D" parent="."]
visible = false
position = Vector2(320, 320)
script = ExtResource("7_jk1qb")
metadata/_custom_type_script = "uid://pqsscp47tjbh"

[node name="Arc2D" type="Node2D" parent="Rotator2D"]
script = ExtResource("8_5dd4i")
radius = 80.0
length = 0.8
offset = 0.25
color = Color(0.953934, 0.386551, 0.402924, 1)
metadata/_custom_type_script = "uid://coejdc7tqlu5s"

[node name="ConfirmOption" parent="." instance=ExtResource("9_jk1qb")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -152.0
offset_right = 100.0
offset_bottom = -92.0
grow_horizontal = 2
grow_vertical = 0
text = "Confirm"
label_settings = SubResource("LabelSettings_wu84c")

[node name="CancelButton" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 38.0
offset_top = 549.0
offset_right = 156.0
offset_bottom = 604.0
text = "Cancel"
